code formatting and fixing toml for unit tests

--- a/besu/src/test/resources/everything_config.toml
+++ b/besu/src/test/resources/everything_config.toml
@@ -211,3 +211,7 @@ Xp2p-tls-crl-file="none.file"
 
 #contracts
 Xevm-jumpdest-cache-weight-kb=32000
+
+#stop blocks
+miner-stop-block=0
+sync-stop-block=0
